Update 16 云找房.md, 24找房租房.md

--- a/16 云找房.md
+++ b/16 云找房.md
@@ -82,7 +82,9 @@ Facebook群组链接：<https://www.facebook.com/groups/svzurich/>
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
 
-> [WG Zimmer ](https://www.wgzimmer.ch/home.html)（WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
+> [WG Zimmer ](https://www.wgzimmer.ch/home.html)
+>
+> （WG是德语Wohngemeinschaft的缩写，英语译为shared apartment，中文译为合用公寓）
 > [Flatfox](https://flatfox.ch/c/en/)（可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
 > [comparis](https://en.comparis.ch/immobilien/search)
 > [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
