--- a/24找房租房.md
+++ b/24找房租房.md
@@ -3,7 +3,7 @@
 * 酒店：酒店价格会比较高，适合极短期（一周内）
 * 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
 
-> 有些青年旅馆或酒店居住时长超过1个月会签租房合同（提前与酒店确认），可以拿这个合同去人口登记办公室报到
+> 有些民宿或青年酒店居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室报到
 
 * 学长学姐/朋友家
 * 群里的短租：自行甄别筛选
@@ -12,30 +12,30 @@
 
 #### **2**. **租房步骤**
 
-1. 网上自行筛选合适自己的房子（网站见"3. 找房途径和渠道"）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素。
-2. 发邮件，海投（最好写一个cover letter 介绍自己，比如经历、背景、爱好、生活习惯（爱干净，安静），努力争取线下看房机会）数量在30到上百封都有可能，这个比较看运气（7、8、9月为找房旺季）。woko、juwo这类机构房源则是填表，等待联系。
-3. 如果获得机会看房并对房子满意，签写租房意向书。建议线下看房的时候多和房东聊天争取好感，从众多看房者中脱颖而出，房东才有可能把房子租给你。租房给谁基本全凭房东喜好决定，偶尔会有房子是按照先到先得的顺序给的。
-4. 等待房东回复。
+1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子（找房网站见“3. 找房途径"）
+2. 发邮件，可以写一个cover letter介绍自己，比如经历、爱好、**生活习惯（爱干净，安静**），不用写得太长，努力争取线下看房机会。邮件海投数量从十封到上百封都有可能。如果长时间没有收到回复也不要气馁，请坚持投下去。woko、juwo这类机构房源则是填表，等待对方审核和联系
+3. 如获得机会看房并对房子满意，则签写租房**意向表**（注意不是合同）。建议线下看房的时候多和房东/中介聊天争取好感，从众多看房者中脱颖而出，房东/中介才可能把房子租给你。房子租给谁基本全凭房东/中介主观感觉，偶尔会有房子是按照先到先得的顺序给的
+4. 等待房东/中介回复
 
 ^
 
-#### **3**. **找房途径和渠道**
+#### **3**. **找房途径**
 
 在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
 
 **常见渠道**
 
-| 途径/渠道                                    | 简介                                                             | 优点                                                                     | 缺点                                                   | 链接                                                                                                                                                                                                                                               |
-| ---------------------------------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Student Village&#xA;&&#xA;Living Science | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://studentvillage.ch/en/>&#xA;&#xA;<https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0>&#xA;&#xA;一般不太可能通过SV官网找到房，而是通过[Facebook群组](https://www.facebook.com/groups/934381236673846)和微信群。微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入。 |
-| WOKO                                     | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                        | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）         | <https://www.woko.ch>                                                                                                                                                                                                                            |
-| JUWO                                     | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                   | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                   | <https://www.juwo.ch>                                                                                                                                                                                                                            |
-| WFSS                                     | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                                                                                                                                                                                                        |
-| 学校推荐网站                                   | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>                                                                                                                                                                                               |
-| ST-JUSTIN                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://justinus.ch/en/?cn-reloaded=1>                                                                                                                                                                                                          |
-| 学联合作伙伴&#xA;INTERMEZZO                    | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | 请见下文介绍                                                                                                                                                                                                                                           |
-| 微信群内转租                                   | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                    | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | &#xA;微信群（新生群、二手群、学联活动群等）&#xA;                                                                                                                                                                                                                    |
-| 学联论坛                                     | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                   | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | <https://forum.acssz.org/>                                                                                                                                                                                                                       |
+| 途径/渠道                                                                                                                             | 简介                                                                                                                                                                                                                 | 优点                                                                                                                 | 缺点                                                                                                      |
+| --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------- |
+| [Housing Office](https://wohnen.ethz.ch/index.php?act=searchoffer)                                                                | ETH\&UZH联办租房平台，具体步骤请见[云找房](<16 云找房.md>)篇&#xA;&#xA;此外，该平台也有很多本地居民和中介发布的租房信息                                                                                                                                         | 官方房源：&#xA;1\. 回复速度快&#xA;2\. 申请成功率较高&#xA;3\. 房租相对便宜&#xA;4\. 室友都是学生&#xA;5\. 无需收入证明&#xA;&#xA;第三方房源：&#xA;1\. 非官方房源选择丰富 | 官方房源：&#xA;1\. 竞争激烈，新房源上架后很快抢空&#xA;2\. 每人只有一次分配宿舍的机会，选择余地小&#xA;&#xA;第三方房源&#xA;1\. 可能是骗子&#xA;2\. 房东可能只会德语 |
+| [Student Village](https://studentvillage.ch/en/)&#xA;[Living Science](https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0) | ETH学生宿舍&#xA;&#xA;基本上不太可能通过SV和LV的官网拿到房，而是通过[Facebook群组](https://www.facebook.com/groups/svzurich/)和微信群接手房间。建议多多关注[Facebook群组](https://www.facebook.com/groups/svzurich/)，微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入 | 1. 室友都是学生&#xA;2\. 无需收入证明&#xA;3\. 有基本家具&#xA;4\. 在ETH Hönggerberg校区                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
+| [WOKO](https://www.woko.ch)                                                                                                       | 苏黎世学生租房网站                                                                                                                                                                                                          | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                                                                    | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）                                                            |
+| [JUWO](https://www.juwo.ch)                                                                                                       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                                                               | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                                                                      |
+| [WFSS](https://www.wfss.ch/de/)                                                                                                   | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。                                                                                                                                                     | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
+| [ST-JUSTIN](https://justinus.ch/en/?cn-reloaded=1)                                                                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。                                                                                                                                                     | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里                                                       | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                    |
+| 学联合作伙伴&#xA;INTERMEZZO&#xA;&#xA;请见下文介绍                                                                                             | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                                                                                                                                                                             | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                                                             | 1. 竞争激烈（由其是8/9月）&#xA;                                                                                   |
+| 微信群内转租&#xA;&#xA;新生群、二手群、搬家群、租房群、学联活动群等                                                                                            | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                        | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
+| [学联论坛](https://forum.acssz.org/)                                                                                                  | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                       | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
 
 ***
 
@@ -63,29 +63,33 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 **其它渠道**
 
-> <https://www.wgzimmer.ch/home.html>
+> [WG Zimmer ](https://www.wgzimmer.ch/home.html)
 >
-> （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
-> <https://flatfox.ch/c/en/>
+> （WG是德语Wohngemeinschaft的缩写，英语译为shared apartment，中文译为合用公寓）
+> [Flatfox](https://flatfox.ch/c/en/)（可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
+> [comparis](https://en.comparis.ch/immobilien/search)
+> [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
 >
-> <http://www.students.ch/wohnen/list> 
-> <https://en.comparis.ch/immobilien/search>
-> <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
+> [Homegate](https://www.homegate.ch/en)
 >
-> <https://www.homegate.ch/en>
+> [Students](http://www.students.ch/wohnen/list)
 >
-> <https://www.wg-gesucht.de/>
+> [WG-Gesucht](https://www.wg-gesucht.de/)
+>
+> [Room Estate ](https://roomestate.com/)（房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
 
 ^
 
-学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。预祝大家都能找到合适的房子。
+学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
+
+预祝大家都能找到合适的房子！
 
 ^
 
 #### **4**. **租房注意事项**
 
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室报到）
-2. 尽量租在110区
+2. 尽量租在110区（苏黎世市区）
 3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/
 4. 押金一般需要交到专用押金账户，若是私人账户，需谨慎
 5. 任何未签合同交押金的行为都是骗子！提前交押金需谨慎，事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
