--- a/24找房租房.md
+++ b/24找房租房.md
@@ -90,17 +90,16 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室报到）
 2. 尽量租在110区（苏黎世市区）
-3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/
-4. 押金一般需要交到专用押金账户，若是私人账户，需谨慎
-5. 任何未签合同交押金的行为都是骗子！提前交押金需谨慎，事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
-6. 尽量选择线下签合同，线上签合同需谨慎
-7. 提前与房东敲定交钥匙时间
-8. 入住前，将房屋内破损处全部拍照留档，并告知房东，以免退租时出现不必要的纠纷。并购买第三方责任险，退房有意外保险会赔付
-9. 尽量选择能够长租的房子，搬家真的很麻烦！若是短租，需谨慎
-10. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
+3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要被没有家具劝退，自己置办家具也是不错的选择
+4. 瑞士正规租房流程没有定金的说法，并不要交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
+5. 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
+6. 尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。线上签合同需谨慎
+7. 签合同后，房东应该和你一同确认房间现有破损，并记录在检查单上，由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+8. 和它人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账（转给房东或中介），以避免房客间不必要的资金往来纠纷
+9. 尽量选择能够长租的房子，搬家真的很麻烦。若是短租，需谨慎
+10. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
 11. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
-12. 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
-13. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
+12. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
 
 ^
 
