--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -4,7 +4,7 @@
 
 #### **1. 苏黎世州的住址申报体系介绍**
 
-本章节内容自2023年6月12日起适用。
+*本章节内容自2023年6月12日起适用。*
 本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：
 
 | 本文使用的中文译名          | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
@@ -12,7 +12,7 @@
 | 苏黎世州               | Kanton Zürich                                                | Canton of Zurich                                                                   |
 | 苏黎世市 / 苏黎世市区       | Stadt Zürich                                                 | City of Zurich                                                                    |
 | 市县                 | Gemeinde                                                     | Community                                                                          |
-| 居委会（2023年6月12日起撤销） | Kreisbüro                                                    | District office                                                                    |
+| 居委会 *（2023年6月12日起撤销）* | Kreisbüro                                                    | District office                                                                    |
 | 人口登记处              | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
 | 住址申报               | anmelden                                                     | register                                                                           |
 | 住址变更               | Addresseänderung                                             | Change of residential address                                                      |
@@ -93,7 +93,7 @@
 
 #### **4**. **申报确认函**（**Meldebestätigung**/**Confirmation of registration**）
 
-新迁入苏黎世的人员在完成住址申报后会获得一张“申报确认函”（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效（但办理Postpaid电话卡仍然需要居留证）。
+新迁入苏黎世的人员在完成住址申报后会获得一张“申报确认函”（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效（但办理Postpaid电话卡等业务时仍然需要居留证）。
 凭该申报确认函即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）。
 虽然相比于正式的居留证，这张确认使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张报到确认函上的参考号（具体根据所选报告方式有所不同）。
 
