--- a/24找房租房.md
+++ b/24找房租房.md
@@ -10,16 +10,16 @@
 
 ^
 
-#### **2**. **租房步骤**
+#### **2**. **找房步骤**
 
-1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子（找房网站见“3. 找房途径"）
+1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子
 2. 发邮件，可以写一个cover letter介绍自己，比如经历、爱好、**生活习惯（爱干净，安静**），不用写得太长，努力争取线下看房机会。邮件海投数量从十封到上百封都有可能。如果长时间没有收到回复也不要气馁，请坚持投下去。woko、juwo这类机构房源则是填表，等待对方审核和联系
 3. 如获得机会看房并对房子满意，则签写租房**意向表**（注意不是合同）。建议线下看房的时候多和房东/中介聊天争取好感，从众多看房者中脱颖而出，房东/中介才可能把房子租给你。房子租给谁基本全凭房东/中介主观感觉，偶尔会有房子是按照先到先得的顺序给的
 4. 等待房东/中介回复
 
 ^
 
-#### **3**. **找房途径**
+#### **3**. **找房渠道**
 
 在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
 
