--- a/10申请签证.md
+++ b/10申请签证.md
@@ -16,11 +16,11 @@
 * 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
 * 动机信
 * 毕业计划（**避免表达留瑞意向**）
-* 银行存款（请存入移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中，2023年5月名单包含：建行、工行和中行）
+* 银行存款（请存入苏黎世州移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有要求存款冻结，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
 
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
-> 这些信息由ETH与苏黎世州移民局合作编写，满足官方要求。
+> 这些信息由ETH与苏黎世州移民局合作编写，**满足苏黎世州移民局官方最新要求**。
 >
 > ^
 >
@@ -48,7 +48,7 @@
 
 ^
 
-#### **3. 几点特别注意的**！
+#### **3. 特别注意**！
 
 * 注意不要用旅游签证进入瑞士
 * 上述学校官网要求的申请材料仅针对苏黎世州的高等院校
@@ -60,23 +60,27 @@
 
 给学校的International Student Office发邮件，邮件回复很快
 
-> ETH国际学生办公室 <https://ethz.ch/students/en/studies/international-students.html>
+> **ETH国际学生办公室** <https://ethz.ch/students/en/studies/international-students.html>
 >
 > UZH国际学生支持 <https://www.internationals.uzh.ch/en.html>
+
+或给你所在领区的使领馆发邮件
+
+或咨询苏黎世州移民局，请填写咨询表（德语）：<https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html>
 
 ^
 
 #### **5. 在哪里递交签证材料**
 
-瑞士在中国一共有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都，以下链接含有使领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
+瑞士在中国设有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都。以下链接含有各使领馆服务的省市自治区名单，点击对应使领馆可查看该馆签证（Visa）相关问题的咨询邮箱及电话热线（请注意电话咨询营业时间）
 
-> <https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
+> <https://www.eda.admin.ch/countries/china/en/home/representations.html>
 
 ^
 
 #### **6. 如何预约递交签证材料**
 
-可以在准备材料的同时就查看以下网站&#x20;
+可以在准备签证申请材料的同时就查看以下网站&#x20;
 
 > <https://visa.vfsglobal.com/chn/zh/che/>
 
