Update .topwrite/assets/image_1687209102109.png, 10申请签证.md, 28居留证的办理.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -6,16 +6,17 @@
 
 #### **2. 申请材料**
 
-**请详细阅读学校给出的清单** ，清单可在下方链接里查看。以下仅为一般性总结及注意点，**请以学校官网信息作为申签指导**！
+**请详细阅读学校给出的清单 ，清单可在下方链接里查看。请以学校官网信息作为申签指导**！以下仅为一般性总结及注意点：
 
-* 申请表（National Type D Visa，链接中有下载表）
+* 申请表（National Type D Visa）
 * 护照（注意护照有效期，如有效期一年内，则建议先换护照）
 * 护照照片（背景+尺寸按使领馆要求）
 * 学校注册确认信
 * 简历（需注明语言水平）
-* 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
+* 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请提前安排时间）
 * 动机信
-* 毕业计划（**避免表达留瑞意向**）
+* 学习计划（study plan）
+* 毕业计划（future plan，**避免表达留瑞意向**）
 * 银行存款（请存入苏黎世州移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有要求存款冻结，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
 
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
@@ -58,21 +59,33 @@
 
 #### **4. 如有问题**？
 
-给学校的International Student Office发邮件，邮件回复很快
+给学校的**International Student Office**发邮件，邮件回复快
 
 > **ETH国际学生办公室** <https://ethz.ch/students/en/studies/international-students.html>
 >
 > UZH国际学生支持 <https://www.internationals.uzh.ch/en.html>
 
-或给你所在领区的使领馆发邮件
+^
 
-或咨询苏黎世州移民局，请填写咨询表（德语）：<https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html>
+或给你**递签的使领馆**发邮件 / 打电话
+
+> 点击对应使领馆可查看该馆签证（Visa）相关问题的**咨询邮箱**及**电话热线**（请注意电话咨询营业时间）<https://www.eda.admin.ch/countries/china/en/home/representations.html>
+
+^
+
+或咨询**苏黎世州移民局**，请填写咨询表（德语）
+
+> <https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html>
+
+或电话咨询（Skype等）**移民局**：+41 43 259 88 00（瑞士时间星期一到星期五 08:00-12:00、13:00-16:30可用）
+
+> 拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间拨打。
 
 ^
 
 #### **5. 在哪里递交签证材料**
 
-瑞士在中国设有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都。以下链接含有各使领馆服务的省市自治区名单，点击对应使领馆可查看该馆签证（Visa）相关问题的咨询邮箱及电话热线（请注意电话咨询营业时间）
+瑞士在中国设有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都。以下链接含有**各使领馆服务的省市自治区名单**：
 
 > <https://www.eda.admin.ch/countries/china/en/home/representations.html>
 
