--- a/28居留证的办理.md
+++ b/28居留证的办理.md
@@ -67,5 +67,5 @@
 
 ^
 
-**移民局咨询电话**: +41 43 259 88 00（瑞士时间星期一-星期五 08:00-12:00、13:00-16:30可用）
+**移民局咨询电话**：+41 43 259 88 00（瑞士时间星期一到星期五 08:00-12:00、13:00-16:30可用）
 拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间拨打。
