--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,4 +1,4 @@
-#### **1. 临时过渡住所**
+### **1. 临时过渡住所**
 
 * 酒店：酒店价格会比较高，适合极短期（一周内）
 * 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
@@ -10,7 +10,7 @@
 
 ^
 
-#### **2**. **找房步骤**
+### **2**. **找房步骤**
 
 1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子
 2. 发邮件，可以写一个cover letter介绍自己，比如经历、爱好、**生活习惯（爱干净，安静**），不用写得太长，努力争取线下看房机会。邮件海投数量从十封到上百封都有可能。如果长时间没有收到回复也不要气馁，请坚持投下去。woko、juwo这类机构房源则是填表，等待对方审核和联系
@@ -19,7 +19,7 @@
 
 ^
 
-#### **3**. **找房渠道**
+### **3**. **找房渠道**
 
 在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
 
@@ -86,30 +86,88 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-#### **4**. **租房注意事项**
+### **4**. **租房注意事项**
 
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室报到）
-2. 尽量租在110区（苏黎世市区）
-3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要被没有家具劝退，自己置办家具也是不错的选择
-4. 瑞士正规租房流程没有定金的说法，并不要交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
-5. 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
-6. 尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。线上签合同需谨慎
-7. 签合同后，房东应该和你一同确认房间现有破损，并记录在检查单上，由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
-8. 和它人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账（转给房东或中介），以避免房客间不必要的资金往来纠纷
-9. 尽量选择能够长租的房子，搬家真的很麻烦。若是短租，需谨慎
-10. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
-11. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
-12. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
+2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要被没有家具劝退，自己置办家具也是不错的选择
+3. 瑞士正规租房流程没有定金的说法，并不要交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
+4. 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
+5. 尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。线上签合同需谨慎
+6. 签合同后，房东应该和你一同确认房间现有破损，并记录在检查单上，由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+7. 和它人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账（转给房东或中介），以避免房客间不必要的资金往来纠纷
+8. 尽量选择能够长租的房子，搬家真的很麻烦。若是短租，需谨慎
+9. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
+10. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
+11. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
 
 ^
 
-#### **5**. **什么是注册地址**
+### **5. “注册”地址相关**
 
-1. 总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其并不对应任何官方条文概念。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
-2. 只要能签租房合同，无论是Mietvertrag oder Untermietvertrag（原始合同或转租合同），都是可以的。请注意如果你是租的转租，需要把转租合同和二房东手里的原始合同一起带去Kreisbüro，且最好二房东一起陪同前往Kreisbüro报到
-3. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去Kreisbüro报到**
-4. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
+总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
+
+^
+
+#### **同一个地址可否申报多人**？（“短租转租注册”问题）
+
+可以。
+
+根据政府官方工作人员的回答：
+
+> 人口登记办公室并无房屋相关信息，仅负责地址登记；房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，凡原房东同意转租的，不会有申报冲突的问题。
+
+可理解为**凡持有短期转租合同的都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报**。
+
+^
+
+此外，根据苏黎世州官方政策：
+
+如果A决定转租房间给B，那么**应在转租开始的14天内向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
+
+> <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>
+>
+> <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html>
+
+^
+
+#### **具体流程上如何为转租租客进行地址申报**？
+
+只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
+
+^
+
+不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行申报**。
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
 ^
+
+#### **什么是收“注册”地址/出“注册”地址**？
+
+所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
+
+^
+
+### **6. 110区相关**
+
+#### **什么是110区**？
+
+110区是ZVV苏黎世州交通协会划定的一个**公共交通分区**，其对应**苏黎世市市属公共交通系统**（Stadtnetz Zürich），因此可以与苏黎世市区相对照——**如果你租的房子在110区，则意味着你住在苏黎世市区**。
+
+> <https://www.stadt-zuerich.ch/vbz/de/index/tickets/tarifzonensystem.html>
+
+^
+
+#### **如何确定我想租的房子是否在110区/苏黎世市区**？
+
+最直接的办法是查看该房子**对应邮编号码后的地名**，只要该地名是**Zürich**（不管是8001 **Zürich**还是8092 **Zürich**），那就是苏黎世市，也就代表着该房子位于110区/苏黎世市区。
+
+反之，如果后面的地名不是Zürich而是其它的——如Dübendorf，Winterthur等，就说明该房子不在110区/苏黎世市区。
+
+> 瑞士邮政**邮编及地名**查询页面 <https://www.post.ch/en/pages/plz-suche>
+
+^
+
+#### **一定要租110区/苏黎世市区的房子吗**？
+
+不一定。如上文所说，110区指苏黎世市区，其覆盖范围很大（交通月票/年票收费上算作2个区），即便房子在110区，其离你的主要上课校区可能依然很远（如单程通勤半小时）。重要的是考虑自己平时的主要上课校区、通勤时间、交通费、房租等因素并综合权衡，且同时考虑该房子是初来瑞士短租过渡还是未来2-3年的稳定长租。
