--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -4,21 +4,21 @@
 
 #### **1. 苏黎世州的住址申报体系介绍**
 
-*本章节内容自2023年6月12日起适用。*
+*本章节内容自2023年6月12日起适用*。
 本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：
 
-| 本文使用的中文译名          | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
-| ------------------ | ------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
-| 苏黎世州               | Kanton Zürich                                                | Canton of Zurich                                                                   |
-| 苏黎世市 / 苏黎世市区       | Stadt Zürich                                                 | City of Zurich                                                                    |
-| 市县                 | Gemeinde                                                     | Community                                                                          |
-| 居委会 *（2023年6月12日起撤销）* | Kreisbüro                                                    | District office                                                                    |
-| 人口登记处              | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
-| 住址申报               | anmelden                                                     | register                                                                           |
-| 住址变更               | Addresseänderung                                             | Change of residential address                                                      |
-| 住址注销               | abmelden                                                     | de-register                                                                        |
-| 申报确认函          | Meldebestätigung                                        | Confirmation of registration                                               |
-| 居留证/居留卡        | Aufenthaltstitel&#xA;   Aufenthaltsbewilligung                               | Residence permit                                                               |
+| 本文使用的中文译名             | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
+| --------------------- | ------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
+| 苏黎世州                  | Kanton Zürich                                                | Canton of Zurich                                                                   |
+| 苏黎世市 / 苏黎世市区          | Stadt Zürich                                                 | City of Zurich                                                                     |
+| 市县                    | Gemeinde                                                     | Community                                                                          |
+| 居委会 （*2023年6月12日起撤销*） | Kreisbüro                                                    | District office                                                                    |
+| 人口登记处                 | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
+| 住址申报                  | anmelden                                                     | register                                                                           |
+| 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
+| 住址注销                  | abmelden                                                     | de-register                                                                        |
+| 申报确认函                 | Meldebestätigung                                             | Confirmation of registration                                                       |
+| 居留证/居留卡               | Aufenthaltstitel&#xA;   Aufenthaltsbewilligung               | Residence permit                                                                   |
 
 ^
 
@@ -32,16 +32,16 @@
 > [warning] **背景介绍**
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记处（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
-> * **南城人口登记处（Personenmeldeamt Zürich Süd）**
->   **地址：Stadthausquai 17, 8001 Zürich（市政厅）**
->   网站：[Personenmeldeamt Zürich Süd](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html>)
+> * **南城人口登记处（Personenmeldeamt Zürich Süd**）
+>   **地址：Stadthausquai 17, 8001 Zürich（市政厅**）
+>   网站：[Personenmeldeamt Zürich Süd](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html)
 > * 北城人口登记处（Personenmeldeamt Zürich Nord）
 >   地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
->   网站：[Personenmeldeamt Zürich Nord](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html>)
+>   网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
 > * 西城人口登记处（Personenmeldeamt Zürich West）
 >   地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
->   网站：[Personenmeldeamt Zürich West](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html>)
-> 
+>   网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
+>
 > 3个人口登记处的联系电话均为：+41 44 412 15 15
 > 重组后，市区范围内绝大多数业务均实现免预约的全市通办，本章节已按此更新。**苏黎世郊区的人口登记处（以及各区的债务办）不受本次重组的影响**。
 
@@ -52,8 +52,8 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭[预约](https://www.etermin.net/personenmeldeamtsued)前往南城人口登记处**进行住址申报
-*（必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路）*
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报
+  （*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路*）
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报，具体请参见所在区县的人口登记处官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
@@ -78,7 +78,8 @@
 * 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
 
 同时，还需**带足200瑞郎**用于缴费
->*报到证明：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用。可刷卡（MasterCard、Visa卡可以，银联卡待核实），是否可现金待核实*
+
+> *报到证明：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用。可刷卡（MasterCard、Visa卡可以，银联卡待核实），是否可现金待核实*
 
 ![](.topwrite/assets/image_1685710948287.png =507)
 
