--- a/24找房租房.md
+++ b/24找房租房.md
@@ -23,7 +23,7 @@
 
 在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
 
-**常见渠道**
+#### **常见渠道**
 
 | 途径/渠道                                                                                                                             | 简介                                                                                                                                                                                                                 | 优点                                                                                                                 | 缺点                                                                                                      |
 | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------- |
@@ -39,7 +39,7 @@
 
 ***
 
-**学联合作伙伴——INTERMEZZO租房公司**
+#### **学联合作伙伴——INTERMEZZO租房公司**
 
 房型：2.5的studio到4.5的三人或四人合租flat及8人以上合租的独栋湖景别墅。
 房源：主要在苏黎世市区，靠近UZH、ETH、ZHAW等主校，在Oerlikon、Irchel、ETH Hönggerberg附近。
@@ -61,7 +61,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-**其它渠道**
+#### **其它渠道**
 
 > [WG Zimmer ](https://www.wgzimmer.ch/home.html)
 >
