--- a/24找房租房.md
+++ b/24找房租房.md
@@ -3,7 +3,7 @@
 * 酒店：酒店价格会比较高，适合极短期（一周内）
 * 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
 
-> 有些民宿或青年酒店居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室报到
+> 有些民宿或青年酒店居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
 
 * 学长学姐/朋友家
 * 群里的短租：自行甄别筛选
@@ -108,7 +108,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-#### **同一个地址可否申报多人**？（“短租转租注册”问题）
+#### **同一个地址可否申报多人**？（“短期转租注册”问题）
 
 可以。
 
